# cs410-adv-functional-programming-sp23

./: .gitignore
Class Notes & Examples/intro/intro/: CHANGELOG.md  intro.cabal
Class Notes & Examples/intro/intro/app/: Main.hs
Class Notes and Examples/: day1april3rd2023.hs
Class Notes and Examples/intro/intro/: LICENSE
Projects/Project1/: README.md  proj1.hs  test.txt  test2.txt
Projects/Project2/: LICENSE  README.md  assignment2.cabal
Projects/Project2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
Projects/Project2/src/: Grid.hs  Main.hs  Minesweeper.hs
Projects/Project3/: LICENSE  README.md  assignment3.cabal
Projects/Project3/src/: Grid.hs  Main.hs  Tictactoe.hs
