cabal-version: 2.4
name: assignment3
version: 0.0.0.0
synopsis: Assignment 3, CS 410/510 Advanced Functional Programming, Spring 2023.

license: BSD-3-Clause
author: Katie Casamento, Ranjit Jhala, & Dan Jang
maintainer: cas28@pdx.com, jhala@cs.ucsd.edu, & yeh2@pdx.edu

category: Education

executable tictactoe
  main-is: Main.hs
  other-modules: Grid, Tictactoe

  hs-source-dirs: src
  default-language: GHC2021

  build-depends:
    base <5,
    brick,
    containers,
    mtl,
    optparse-applicative,
    pretty-simple,
    primitive,
    random,
    text,
    transformers,
    vector,
    vty

  default-extensions:
    ApplicativeDo
    DerivingVia
    ImportQualifiedPost
    LexicalNegation
    NoFieldSelectors
    NoStarIsType
    OverloadedRecordDot

  ghc-options:
    -threaded
    -fdefer-typed-holes
    -fhelpful-errors
    -fno-warn-missing-home-modules
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=overflowed-literals
    -Werror=partial-fields
    -Wduplicate-exports
    -Widentities
    -Wname-shadowing
    -Wredundant-constraints
    -Wtyped-holes
    -O
